# Auto-ERP-Agent

./: .env.example  .gitignore  Atrybuty.bat  CHANGELOG.md  CLAUDE.md  Działanie Agneta.md  ERP_AGENT.md  FakturyFKo.bat  FakturyFZ.bat  FakturyFZ.spec  INSTALL.md  Mapowanie okien i filtrów  Mapowanie palet JAS.txt  Oferta katalogowa.bat  README.md  SETUP_MACHINE.md  Wycena AUCHAN.xlsm  Wycena AUCHAN_v2.xlsm  backlog_view.md  backlog_view.xlsx  build_installer.bat  changes_propositions.md  dekle.xlsx  etykiety.bat  import_columns.py  import_filters.py  inbox_developer.md  inbox_human.md  ksef_generuj.bat  ksef_generuj_fs.bat  ksef_generuj_kor.bat  ksef_generuj_rabat.bat  ksef_generuj_skonto.bat  ksef_raport_dzienny.bat  ksef_service.bat  ksef_start.bat  ksef_ustawienia.bat  ksef_wyslij_demo.bat  messages.md  messages_view.xlsx  (+23 more)
serce/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
serce/backend/alembic/: env.py
serce/backend/alembic/data/: cities_pl.csv
serce/backend/alembic/versions/: a1b2c3d4e5f6_seed_voivodeships.py  b2c3d4e5f6a7_seed_cities.py  c3d4e5f6a7b8_seed_categories.py  d4e5f6a7b8c9_seed_system_config.py  f8e3d1a9b7c2_initial_schema.py
serce/backend/app/: config.py  main.py
serce/backend/app/api/v1/: admin.py  auth.py  categories.py  exchanges.py  flags.py  hearts.py  locations.py  messages.py  notifications.py  offers.py  requests.py  reviews.py  router.py  user_resources.py  users.py
serce/backend/app/cli/: promote_admin.py
serce/backend/app/core/: captcha.py  deps.py  email_denylist.py  rate_limit.py  security.py
serce/backend/app/db/: base.py  session.py
serce/backend/app/db/models/: __init__.py  admin.py  category.py  exchange.py  (+8 more)
serce/backend/app/schemas/: account.py  admin.py  auth.py  category.py  exchange.py  flag.py  hearts.py  location.py  message.py  notification.py  offer.py  profile.py  request.py  review.py  session.py  user.py  user_resources.py
serce/backend/app/services/: account_service.py  admin_service.py  auth_service.py  email_service.py  exchange_service.py  flag_service.py  hearts_service.py  message_service.py  notification_service.py  offer_service.py  profile_service.py  request_service.py  review_service.py  scheduler_service.py  sms_service.py  user_resources_service.py  verification_service.py
serce/backend/tests/: test_account_api.py  test_account_service.py  test_admin_api.py  test_admin_service.py  test_auth_api.py  test_captcha.py  test_config.py  test_email_denylist.py  test_email_service.py  test_exchange_api.py  test_exchange_service.py  test_flag_api.py  test_flag_service.py  test_health.py  test_hearts_api.py  test_hearts_concurrency.py  test_hearts_service.py  test_message_api.py  test_message_service.py  test_migration.py  test_models.py  test_notification_api.py  test_notification_hooks.py  test_notification_service.py  test_offer_api.py  test_offer_service.py  test_profile_service.py  test_request_api.py  test_request_service.py  test_review_api.py  test_review_service.py  test_scheduler.py  test_security.py  test_sms_service.py  test_user_resources_api.py  test_user_resources_service.py  test_users_api.py  test_verification_service.py
serce/backend/tests/integration/: conftest.py
(+1251 files in other folders)
